--- a/app/src/main/res/layout/layout_audio_recording.xml
+++ b/app/src/main/res/layout/layout_audio_recording.xml
@@ -5,98 +5,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_main"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="300dp"
+            android:layout_margin="40dp"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-
-            <TextView
-                android:id="@+id/text_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Grabando..."
-                android:visibility="invisible"
-                tools:visibility="visible"/>
-
-
-            <ImageView
-                android:id="@+id/image_mic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:background="@drawable/background_circle"
-                android:padding="18sp"
-                android:src="@drawable/baseline_mic"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_status"
-                app:tint="?attr/colorPrimary" />
-
-            <TextView
-                android:id="@+id/text_time"
-                tools:text="1:46"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="?attr/colorPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:visibility="invisible"
-                tools:visibility="visible"
-                app:layout_constraintTop_toBottomOf="@id/image_mic"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_start"
-                style="?attr/materialIconButtonFilledStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                app:icon="@drawable/baseline_play_circle"
-                app:layout_constraintEnd_toStartOf="@+id/btn_pause"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_time" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_pause"
-                style="?attr/materialIconButtonFilledStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-
-                tools:visibility="visible"
-                app:icon="@drawable/baseline_pause_circle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/btn_start"
-                app:layout_constraintTop_toBottomOf="@+id/text_time" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_name_record"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_main"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/btn_pause"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:visibility="visible">
+                android:layout_height="400dp">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/text_status"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/text_example_name_audio" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:layout_margin="@dimen/margin_medium"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Grabando..."
+                    android:visibility="invisible"
+                    tools:visibility="visible"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <ImageView
+                    android:id="@+id/image_mic"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_margin="@dimen/margin_medium"
+                    android:background="@drawable/background_circle"
+                    android:contentDescription="TODO"
+                    android:padding="26sp"
+                    android:src="@drawable/baseline_mic"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_status"
+                    app:tint="@android:color/white" />
+
+                <TextView
+                    android:id="@+id/text_time"
+                    tools:text="1:46"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorPrimary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:visibility="invisible"
+                    tools:visibility="visible"
+                    app:layout_constraintTop_toBottomOf="@id/image_mic"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_start"
+                    style="?attr/materialIconButtonFilledStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    app:icon="@drawable/baseline_play_circle"
+                    app:layout_constraintEnd_toStartOf="@+id/btn_pause"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_time" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_pause"
+                    style="?attr/materialIconButtonFilledStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    tools:visibility="visible"
+                    app:icon="@drawable/baseline_pause_circle"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/btn_start"
+                    app:layout_constraintTop_toBottomOf="@+id/text_time" />
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
