--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,4 +63,5 @@
     <color name="md_theme_dark_scrim">#000000</color>
     <color name="CustomColor1">#AABEFF</color>
     <color name="md_theme_card_background">#E5F2FF</color>
+    <color name="color_dialog_found">#22000000</color>
 </resources>
