--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -70,7 +70,8 @@
             android:src="@drawable/ic_pin"
             android:layout_margin="@dimen/margin_small"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
