--- a/app/src/main/res/layout/layout_info_note_main.xml
+++ b/app/src/main/res/layout/layout_info_note_main.xml
@@ -123,19 +123,9 @@
         android:drawableTint="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/material_divider"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dia"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:drawableEnd="@drawable/baseline_today"
-        android:drawableTint="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@+id/material_divider"
-        app:layout_constraintStart_toEndOf="@+id/btn_time"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/tv_time_reminder"
